[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scripts/BodyCollision.gd" type="Script" id=1]
[ext_resource path="res://Scripts/TestText.gd" type="Script" id=2]
[ext_resource path="res://Textures/AnimatedTexture/Portal/Portal3.png" type="Texture" id=3]
[ext_resource path="res://Textures/AnimatedTexture/Portal/Portal5.png" type="Texture" id=4]
[ext_resource path="res://Textures/block3.png" type="Texture" id=5]
[ext_resource path="res://ball.png" type="Texture" id=6]
[ext_resource path="res://Textures/AnimatedTexture/Portal/Portal4.png" type="Texture" id=7]
[ext_resource path="res://Textures/block2.png" type="Texture" id=8]
[ext_resource path="res://Textures/AnimatedTexture/Portal/Portal1.png" type="Texture" id=9]
[ext_resource path="res://Textures/AnimatedTexture/Portal/Portal2.png" type="Texture" id=10]
[ext_resource path="res://Scripts/MovementBase.cs" type="Script" id=11]
[ext_resource path="res://Scripts/MainMenuScripts/ButtonStart.gd" type="Script" id=12]
[ext_resource path="res://Scripts/MainMenuScripts/OptionButton.gd" type="Script" id=13]
[ext_resource path="res://Scripts/MainMenuScripts/HelpButton.gd" type="Script" id=14]
[ext_resource path="res://Scripts/MainMenuScripts/LevelPicker.gd" type="Script" id=15]
[ext_resource path="res://Scripts/MainMenuScripts/ButtonExit.gd" type="Script" id=16]
[ext_resource path="res://Textures/mainMenuBackground.png" type="Texture" id=17]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0.381836, 0, 0, 65, 65, 65, 0.381836, 0.381836 )

[sub_resource type="TileSet" id=3]
0/name = "block2.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "block3.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 65, 65 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="CapsuleShape2D" id=4]
radius = 79.0038
height = 68.8385

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 79.0038
height = 68.8385

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 79.0038
height = 68.8385

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 79.0038
height = 68.8385

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=12]
radius = 51.2007

[node name="Node2D" type="Node2D"]

[node name="Portals" type="Node2D" parent="." groups=[
"Terrain",
]]

[node name="CollisionDetector" type="Area2D" parent="Portals"]

[node name="TileMap" type="TileMap" parent="Portals/CollisionDetector"]
position = Vector2( 13.1709, 355.29 )
tile_set = SubResource( 3 )
cell_quadrant_size = 64
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( -1310743, 4, 0, -1245208, 4, 0, -1048584, -1073741824, 0, -1048583, -1073741824, 0, -1048582, -1073741824, 0, -1048581, -1073741824, 0, -1048580, -1073741824, 0, -1048579, -1073741824, 0, -1048578, -1073741824, 0, -1048577, -1073741824, 0, -1114112, -1073741824, 0, -1114111, -1073741824, 0, -1114110, -1073741824, 0, -1114109, -1073741824, 0, -1114108, -1073741824, 0, -1114107, -1073741824, 0, -1114106, -1073741824, 0, -1114105, -1073741824, 0, -1114104, -1073741824, 0, -1114103, -1073741824, 0, -1114102, -1073741824, 0, -1114101, -1073741824, 0, -1114100, -1073741824, 0, -1114099, -1073741824, 0, -1114098, -1073741824, 0, -1114097, -1073741824, 0, -1114096, -1073741824, 0, -1114095, -1073741824, 0, -1114094, -1073741824, 0, -1114093, -1073741824, 0, -1114092, -1073741824, 0, -1114091, -1073741824, 0, -1114090, -1073741824, 0, -1114089, -1073741824, 0, -1114088, -1073741824, 0, -983048, -1073741824, 0, -1048552, -1073741824, 0, -917512, -1073741824, 0, -983016, -1073741824, 0, -851976, -1073741824, 0, -917480, -1073741824, 0, -786440, -1073741824, 0, -851944, -1073741824, 0, -720904, -1073741824, 0, -786408, -1073741824, 0, -655368, -1073741824, 0, -720872, -1073741824, 0, -589832, -1073741824, 0, -655336, -1073741824, 0, -524296, -1073741824, 0, -589800, -1073741824, 0, -458760, -1073741824, 0, -524264, -1073741824, 0, -393224, -1073741824, 0, -458728, -1073741824, 0, -327688, -1073741824, 0, -393192, -1073741824, 0, -262152, -1073741824, 0, -327656, -1073741824, 0, -196616, -1073741824, 0, -196609, -1073741823, 0, -262144, -1073741824, 0, -262143, -1073741824, 0, -262142, -1073741824, 0, -262141, -1073741824, 0, -262140, -1073741824, 0, -262139, -1073741824, 0, -262132, -1073741824, 0, -262131, -1073741824, 0, -262130, -1073741824, 0, -262129, -1073741824, 0, -262128, -1073741824, 0, -262127, -1073741824, 0, -262126, 1, 0, -262120, -1073741824, 0, -131080, -1073741824, 0, -196604, 1610612737, 0, -196603, -1073741824, 0, -196596, -1073741824, 0, -196595, -1610612735, 0, -196584, -1073741824, 0, -65544, -1073741824, 0, -131067, -1073741824, 0, -131060, -1073741824, 0, -131048, -1073741824, 0, -8, -1073741824, 0, -65531, -1073741824, 0, -65524, -1073741824, 0, -65512, -1073741824, 0, 65528, -1073741824, 0, 5, -1073741824, 0, 12, -1073741824, 0, 24, -1073741824, 0, 131064, -1073741824, 0, 65541, -1073741824, 0, 65548, -1073741824, 0, 65560, -1073741824, 0, 196600, -1073741824, 0, 131096, -1073741824, 0, 262136, -1073741824, 0, 196632, -1073741824, 0, 327672, -1073741824, 0, 327679, 1610612737, 0, 262144, -1073741824, 0, 262145, -1073741824, 0, 262146, -1073741824, 0, 262147, -1073741824, 0, 262148, -1073741824, 0, 262149, -1073741824, 0, 262150, 1, 0, 262155, -1073741823, 0, 262156, -1073741824, 0, 262157, -1073741824, 0, 262158, -1073741824, 0, 262159, -1073741824, 0, 262160, -1073741824, 0, 262161, -1073741824, 0, 262162, -1610612735, 0, 262168, -1073741824, 0, 393208, -1073741824, 0, 327704, -1073741824, 0, 458744, -1073741824, 0, 393240, -1073741824, 0, 524280, -1073741824, 0, 458759, -1073741824, 0, 458760, -1073741824, 0, 458761, -1073741824, 0, 458762, -1073741824, 0, 458776, -1073741824, 0, 589816, -1073741824, 0, 589817, -1073741824, 0, 589818, -1073741824, 0, 589819, -1073741824, 0, 589820, -1073741824, 0, 589821, -1073741824, 0, 589822, -1073741824, 0, 589823, -1073741824, 0, 524288, -1073741824, 0, 524289, -1073741824, 0, 524290, -1073741824, 0, 524291, -1073741824, 0, 524292, -1073741824, 0, 524293, -1073741824, 0, 524294, -1073741824, 0, 524295, -1073741824, 0, 524296, -1073741824, 0, 524297, -1073741824, 0, 524298, -1073741824, 0, 524299, -1073741824, 0, 524300, -1073741824, 0, 524301, -1073741824, 0, 524302, -1073741824, 0, 524303, -1073741824, 0, 524304, -1073741824, 0, 524305, -1073741824, 0, 524306, -1073741824, 0, 524307, -1073741824, 0, 524308, -1073741824, 0, 524309, -1073741824, 0, 524310, -1073741824, 0, 524311, -1073741824, 0, 524312, -1073741824, 0 )

[node name="Portal1" type="Area2D" parent="Portals"]
position = Vector2( -1158.17, 260.142 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portals/Portal1"]
position = Vector2( 906.692, 466.538 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Portals/Portal1/CollisionShape2D"]
position = Vector2( 1.22156, -1.16278 )
frames = SubResource( 5 )
frame = 7
playing = true

[node name="Portal2" type="Area2D" parent="Portals"]
position = Vector2( -1110.9, 1166.71 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portals/Portal2"]
position = Vector2( 1309.4, -786.52 )
shape = SubResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Portals/Portal2/CollisionShape2D"]
position = Vector2( 1.22156, -1.16278 )
frames = SubResource( 7 )
playing = true

[node name="Portal3" type="Area2D" parent="Portals"]
position = Vector2( -360.053, 1167.23 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portals/Portal3"]
position = Vector2( 1309.4, -786.52 )
shape = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Portals/Portal3/CollisionShape2D"]
position = Vector2( 1.22156, -1.16278 )
frames = SubResource( 9 )
frame = 7
playing = true

[node name="Portal4" type="Area2D" parent="Portals"]
position = Vector2( 61.5278, 1505.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portals/Portal4"]
position = Vector2( 1309.4, -786.52 )
shape = SubResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Portals/Portal4/CollisionShape2D"]
position = Vector2( 1.22156, -1.16278 )
frames = SubResource( 11 )
playing = true

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( -89.3727, -181.678 )
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 680.647, 915.844 )
shape = SubResource( 12 )
script = ExtResource( 1 )

[node name="ball" type="Sprite" parent="Player/CollisionShape2D"]
position = Vector2( -0.822533, -0.249489 )
scale = Vector2( 0.528566, 0.528566 )
texture = ExtResource( 6 )

[node name="OptionButton" type="Button" parent="Player"]
margin_left = -82.3937
margin_top = 481.993
margin_right = 114.606
margin_bottom = 510.993
rect_pivot_offset = Vector2( 44, 135.983 )
text = "Options"
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mainMenuBackground" type="Sprite" parent="Player/OptionButton"]
visible = false
position = Vector2( 100.631, 323.8 )
scale = Vector2( 0.0589257, 0.242585 )
texture = ExtResource( 17 )

[node name="ButtonStart" type="Button" parent="Player/OptionButton"]
visible = false
margin_left = 14.0
margin_top = 58.0361
margin_right = 188.0
margin_bottom = 181.036
rect_pivot_offset = Vector2( 1276.12, 122.819 )
shortcut_in_tooltip = false
action_mode = 0
text = "START GAME"
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonExit" type="Button" parent="Player/OptionButton"]
visible = false
margin_left = 10.4364
margin_top = 483.762
margin_right = 192.436
margin_bottom = 603.762
rect_pivot_offset = Vector2( 324.709, 174.189 )
text = "EXIT"
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelPicker" type="Button" parent="Player/OptionButton"]
visible = false
margin_left = 10.4363
margin_top = 200.454
margin_right = 192.436
margin_bottom = 324.454
rect_pivot_offset = Vector2( 94.3264, 81.9076 )
text = "CHOOSE LEVEL"
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpButton" type="Button" parent="Player/OptionButton"]
visible = false
margin_left = 11.2183
margin_top = 344.781
margin_right = 192.218
margin_bottom = 463.781
text = "HELP"
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instr" type="RichTextLabel" parent="Player/OptionButton/HelpButton"]
visible = false
margin_left = 202.0
margin_top = -329.0
margin_right = 404.0
margin_bottom = 111.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 680.768, 921.039 )
scale = Vector2( 2.08, 1 )
current = true
zoom = Vector2( 1.5, 1.5 )

[node name="PortalsConnection" type="CollisionShape2D" parent="."]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
margin_left = -276.0
margin_top = 564.0
margin_right = -222.0
margin_bottom = 580.0
text = "LEVEL 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="Control"]
margin_left = 175.928
margin_top = 225.406
margin_right = 241.928
margin_bottom = 241.406
text = "LEVEL 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="Control"]
margin_left = 1342.05
margin_top = 572.0
margin_right = 1426.05
margin_bottom = 595.0
text = "Level 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="Control"]
margin_left = 924.051
margin_top = 236.103
margin_right = 990.051
margin_bottom = 252.103
text = "LEVEL 4"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_shape_entered" from="Portals/Portal1" to="PortalsConnection" method="_on_Portal1_body_shape_entered"]
[connection signal="body_shape_entered" from="Portals/Portal2" to="PortalsConnection" method="_on_Portal2_body_shape_entered"]
[connection signal="body_shape_entered" from="Portals/Portal3" to="PortalsConnection" method="_on_Portal3_body_shape_entered"]
[connection signal="body_shape_entered" from="Portals/Portal4" to="PortalsConnection" method="_on_Portal4_body_shape_entered"]
[connection signal="pressed" from="Player/OptionButton" to="Player/OptionButton" method="_on_OptionButton_pressed"]
[connection signal="pressed" from="Player/OptionButton/ButtonStart" to="Player/OptionButton/ButtonStart" method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="Player/OptionButton/ButtonExit" to="Player/OptionButton/ButtonExit" method="_on_ButtonExit_pressed"]
[connection signal="pressed" from="Player/OptionButton/LevelPicker" to="Player/OptionButton/LevelPicker" method="_on_LevelPicker_pressed"]
[connection signal="pressed" from="Player/OptionButton/HelpButton" to="Player/OptionButton/HelpButton" method="_on_HelpButton_pressed"]
